# Haxxel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  lua_handler.c  lua_handler.h  main.c
.github/workflows/: cmake-multi-platform.yml
libraries/: itoa.c
utility/: command.c  command.h  headers.h  pointerLabels.c  pointerLabels.h  split.c  split.h
